--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,11 @@ li a {
 li a:hover {
   background-color: #111;
 }
+
+div {
+  background-color: lightgrey;
+  width: 300px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 20px;
+}
