--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ li a:hover {
 div {
   background-color: lightgrey;
   width: 300px;
-  border: 15px solid green;
+  border: 15px;
   padding: 50px;
   margin: 20px;
 }
